# sway-bg-manager

./: LICENSE  main.py  pyproject.toml
